--- a/src/components/Accordeon/Accordion.css
+++ b/src/components/Accordeon/Accordion.css
@@ -8,6 +8,14 @@
 .classCV{
   display:none;
 }
+.ptitCv{
+  filter: grayscale(100);
+}
+.ptitCv:hover{
+  filter: grayscale(0);
+  cursor: pointer;
+  
+}
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
   background-color: #eee;
