--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -80,19 +80,22 @@
     width: 70%;
 }
 
-.print{    
+.pictoPrint{    
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+}
+.print{
+    width: 150px;
 }
 
 .titrePresentation2{
-    padding-top: 60px;
+    padding-top: 00px;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
     text-align: center;
-    color: green;
+    color: #008000;
 }
 .sousTitrePresentation2{
     font-family: 'Roboto', sans-serif;
@@ -149,6 +152,15 @@
     grid-template-areas:
       ". . . .";
   }
+  .pictoWeb{    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.web{
+    width: 150px;
+}
   .site{
       height: 300px;
       display: flex;
@@ -233,7 +245,7 @@
     width: 70%;
 }
 .print{
-    width: 80px;
+    width: 110px;
 }
 
 .titrePresentation2{
@@ -278,6 +290,10 @@
 }
 .listeGraphiste{
     padding-left: 10%;
+}
+
+.web{
+    width: 110px;
 }
 .site{
     height: 180px;
@@ -406,6 +422,10 @@
         flex-direction: column;
         align-items: center;
         background-color: #F9E9C7;  
+    }
+
+    .web{
+        width: 80px;
     }
     .site{
         height: 250px;   
