--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -414,14 +414,15 @@
 
 
 
-
-    .containerWeb {
+.portFolioWeb {    
+    background-color: #F9E9C7;  
+}
+.containerWeb {
         width: 100%;
         text-align: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        background-color: #F9E9C7;  
+        align-items: center;      
     }
 
     .web{
