--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -62,6 +62,10 @@
   font-size:20px;
   margin:20px auto; 
 }
+.inputName::placeholder{
+  font-family: "Manrope", sans-serif;
+    font-weight:500;
+}
 
 .inputFirstName{
 width:40%;
@@ -69,6 +73,10 @@ height:50px;
 padding-left:15px;
 font-size:20px;
 margin:20px auto;
+}
+.inputFirstName::placeholder{
+  font-family: "Manrope", sans-serif;
+    font-weight:500;
 }
 
   .Form {
@@ -96,6 +104,10 @@ margin:20px auto;
   font-size:20px;
   margin:20px auto;
 }
+.inputEmail::placeholder{
+  font-family: "Manrope", sans-serif;
+    font-weight:500;
+}
 .inputMessage{
   width:60%;
   height:400px;
@@ -103,7 +115,10 @@ margin:20px auto;
   font-size:20px;
   padding-top:15px;
   margin: 20px auto;
-
+}
+.inputMessage::placeholder{
+  font-family: "Manrope", sans-serif;
+    font-weight:500;
 }
   .envoyer{
       /* border-radius: 30px; */
