--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -7,17 +7,22 @@
     background: linear-gradient(green,black);
     height: 100%;
     width: 100%;
-    padding-top: 70px;
   }  
   .pictoLettre{    
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+  align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
+    padding-top: 90px;
+  margin-bottom: 20px;
 }
 .lettre{
     width: 150px;
+  margin-bottom: 10px;
+
 }
+
+
   .titrePage {
     text-align: center;
     font-family: "Roboto", cursive;
