--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,6 +70,13 @@
   height: 80px;
 }
 
+.nav-itemBtn {
+  height: 80px;
+  border: none;
+  background-color: initial;
+  font-size: inherit;
+}
+
 .nav-links {
   color: #fff;
   display: flex;
@@ -137,7 +144,7 @@
   } */
   .nav-menu {
     
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
@@ -145,6 +152,16 @@
     top: 80px;
     left: -100%;
     opacity: 1;
+    transition: all 0.5s ease; */
+
+    position: absolute;
+    top: 80px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    left: -100%;
+    opacity: 0;
     transition: all 0.5s ease;
   }
 
@@ -155,8 +172,10 @@
     width: 100%;
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 1;
+    z-index: 1;    
   }
+
+  
 
   .nav-links {
     text-align: center;
@@ -165,6 +184,11 @@
     margin-right: 0px;
     display: flex;
     align-items: center;
+
+    /* text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table; */
   }
 
   .nav-links:hover {
